tests/err_qty/trailing_add.stderr
error: unexpected token
 --> tests/err_qty/trailing_add.rs:5:27
  |
5 |     let _err = qty![1.0 m +];
  |                           ^
